fixing flex container, align items, justify content

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ nav a {
     display: flex;
     -webkit-flex-direction: row;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     margin:10 auto;
     width: 300;
     height: 50px;
